--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: PrivateChat
 version: '${project.version}'
 main: com.aguiar.privatechat.PrivateChat
 api-version: '1.20'
+commands:
+  tell:
+    
+  reply:
+    
